# RAG_system_p1

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  START.bat  docker-compose.yml  fix-onnx.patch  pyproject.toml  test_rag_flow.py
.github/workflows/: ci.yml
docker/: Dockerfile  prometheus.yml
scripts/: ingest.py
src/rag_system/: __init__.py
src/rag_system/api/: app.py  auth.py  dependencies.py  middleware.py
src/rag_system/api/routes/: documents.py  health.py  metrics.py  query.py  sessions.py  streaming_query.py
src/rag_system/api/schemas/: query.py  upload.py
src/rag_system/api/static/: index.html
src/rag_system/core/config/: __init__.py  settings.py
src/rag_system/core/interfaces/: document_processor.py  vector_store.py
src/rag_system/evaluation/: benchmark.py  ragas_runner.py
src/rag_system/evaluation/datasets/: gold_dataset.json
src/rag_system/ingestion/: __init__.py  chunking_service.py  ingestion_service.py  markdown_processor.py  pdf_processor.py  vector_store_chroma.py
src/rag_system/memory/: models.py  redis_memory.py  session_manager.py
src/rag_system/rag/: chain_manager.py  factories.py  grounding.py  models.py  prompts.py  retriever.py
src/rag_system/retrieval/: hybrid.py  parent_child.py  reranker.py
src/rag_system/telemetry/: metrics.py  tracing.py
tests/: conftest.py
tests/unit/: test_document_processor.py  test_phase2_ingestion.py  test_phase3_api.py  test_phase4_rag.py  test_phase5_memory.py  test_phase6_retrieval.py  test_settings.py
