[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = "Production-ready OO RAG Knowledge Retrieval System"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "rag_system", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# API Framework
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"

# LangChain Orchestration
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-huggingface = "^0.1.0"

# Document Parsing
pymupdf = "^1.24.0"          # PDF → PDFProcessor
python-docx = "^1.1.0"       # DOCX → DocxProcessor

# Vector Databases (adapters, pick one at runtime)
chromadb = "^0.5.0"
qdrant-client = "^1.9.0"
pgvector = "^0.3.0"
psycopg2-binary = "^2.9.9"

# Embeddings
openai = "^1.30.0"
sentence-transformers = "^3.0.0"  # HuggingFace local embeddings
onnxruntime = "^1.16.3"

# Config & Validation
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"

# Caching / State
redis = "^5.0.4"

# Auth
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"           # AsyncClient for FastAPI testing
ruff = "^0.4.0"             # Linting + formatting
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
