[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = "Production-ready OO RAG Knowledge Retrieval System"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "rag_system", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# API Framework
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
python-multipart = "*"

# LangChain Orchestration
langchain = "*"
langchain-core = "*"
langchain-community = "*"
langchain-openai = "*"
langchain-huggingface = "*"

# Document Parsing
pymupdf = "*"
python-docx = "*"

# Vector Databases (adapters, pick one at runtime)
chromadb = "*"
qdrant-client = "*"
pgvector = "*"
psycopg2-binary = "*"

# Embeddings
openai = "*"
sentence-transformers = "*"
onnxruntime = "1.15.1"

# Config & Validation
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"

# Caching / State
redis = "*"

# Auth
python-jose = { extras = ["cryptography"], version = "*" }
passlib = { extras = ["bcrypt"], version = "*" }

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
httpx = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
